--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
     <!-- Short description of About Me -->
   <section class="pb-3 mb-3">
-    <h1 id="about" class="pt-3 mt-3 pb-3 mb-3 text-center">About Me</h1>
+    <h1 id="about" class="pt-3 mt-3 pb-3 mb-3 text-center">About US</h1>
 
     <div class="card">
       <div class="card-body">
         <p class="card-text text-center">
-          We are a chick dealer not only in broiler chicks but different types of chicks such as Layer Decalb White and Decalb Brown, Lohman, White Leghorn, etc. For the meat type, Broiler chicks Cobb 500, Ross, Hubbard Sasso, etc.
+          We Started during pandemic period September 26, 2023. We are a chick dealer not only in broiler chicks but different types of chicks such as Layer Decalb White and Decalb Brown, Lohman, White Leghorn, etc. For the meat type, Broiler chicks Cobb 500, Ross, Hubbard Sasso, etc. We supply to some poultry farms or tunnel vent farms from Bulacan, Philippines.
         </p>
         <a href="./pages/about.html" target="_blank" class="btn btn-primary float-end">Learn More</a>
       </div>
