--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <a class="navbar-brand" href="#">
           <img src="./images/logo-chick.png" alt="Logo" width="80" height="80">
         </a>
-        <a class="navbar-brand h1" href="#" >MOSK™</a>
+        <a class="navbar-brand h1" href="https://markjosephmateo.github.io/markjosephmateominiproject1.github.io/index" >MOSK™</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">About</a>
-            <a class="nav-link" href="#">Services</a>
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link active" aria-current="page" href="https://markjosephmateo.github.io/markjosephmateominiproject1.github.io/index">Home</a>
+            <a class="nav-link" href="https://markjosephmateo.github.io/markjosephmateominiproject1.github.io/about">About</a>
+            <a class="nav-link" href="https://markjosephmateo.github.io/markjosephmateominiproject1.github.io/services">Services</a>
+            <a class="nav-link" href="https://markjosephmateo.github.io/markjosephmateominiproject1.github.io/contact">Contact Us</a>
               
         </div>
       </div>
@@ -51,7 +51,7 @@
         <h1>MOSK™ Broiler Chick's Trading</h1>
         <p>Hi! Healthy chicks are hatched from naturally produced eggs with the level of attention you'd expect from free-range farms, tunnel vent broiler farms and convention al broiler farms. Combine the shared values among our hatcheries with the best customer experience in the industry, and you've got every reason to buy broiler and layer chicks from us.</p>
         <form class="container-fluid justify-content-start">
-          <button class="btn btn-primary" type="submit">Order Now!</button>
+          <button class="btn btn-primary" href="https://markjosephmateo.github.io/markjosephmateominiproject1.github.io/contact" type="Order Now!">Order Now!</button>
         </form>
       </div>
       </div>
