--- a/about.html
+++ b/about.html
@@ -21,6 +21,9 @@
 
     <nav class="navbar navbar-expand-lg bg-body-primary">
       <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="./images/logo-chick.png" alt="Logo" width="80" height="80">
+        </a>
         <a class="navbar-brand h1" href="https://markjosephmateo.github.io/markjosephmateominiproject1.github.io/index" >MOSK™</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
